Fix title spacing after fixing quirk mode

--- a/index.css
+++ b/index.css
@@ -1,6 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
+html {
+    height: 100%;
+    margin: 0;
+}
+
 body {
+    height: 100%;
+    margin: 0;
     min-width: 120mm;
             
     color: white;
@@ -23,7 +30,7 @@ a {
 }
 
 .title {
-    margin: auto;
+    width: 100%;
     height: 50%;
 
     display: flex;
